[package]
name = "dirinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
md5 = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = "2.33"
regex = "1.10.6"
tempfile = "3.3"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[target.armv7-unknown-linux-musleabihf]
linker = "arm-linux-musleabihf-gcc"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"

[profile.release]
opt-level = 3         # 最大程度优化代码速度
lto = "fat"           # 启用最大程度的链接时优化
codegen-units = 1     # 降低代码生成单元数，增加优化时间但提升性能
panic = "abort"       # 使用 'abort' 而不是 'unwind' 来处理 panic